# 40kAI

./: .gitignore  .roomodes  1.patch  AGENTS.md  CHANGELOG.md  CLAUDE.md  ENV_MODES.md  GODOT_PORT_PLAN.md  I_O_PERF_CHECKLIST.md  LOGS_FOR_AGENTS.md  LOGS_FOR_AGENTS_PLAY.md  LOGS_FOR_AGENTS_TRAIN.md  MIGRATION_GUIDE.md  PERF_ROADMAP_TRAIN.md  README.md  WINDOWS_SETUP.md  apply_weapon_fix.py  board.txt  build_gui.ps1  build_gui.sh  data.bat  data.ps1  data.sh  eval.py  fix_report_and_abilities.patch  hyperparams.json  launch_terminal_manual.bat  launch_terminal_manual.ps1  launch_terminal_manual.sh  launch_tui.sh  lethal_rapidfire.patch  play.ps1  play.py  play.sh  play_terminal_manual.bat  play_terminal_manual.ps1  play_terminal_manual.sh  project_paths.py  requirements.txt  requirements_windows.txt  (+17 more)
.claude/: settings.json  settings.local.json
app/: __init__.py
docs/: START_HERE.md  benefit_of_cover_audit_2026-03-10.md  dev_render.md  docs_session_summary_2026-03-18.md  faction_training_phases_plan.md  gate_ab_protocol.md  gpu-actors-gmz-design.md  inference-server-az-design.md  inference-server-gaz-design.md  inference-server-gmz-design.md  log_audit_2026-02-19.md  los_hybrid_phase0.md  los_hybrid_phase1_phase2.md  los_hybrid_phase3_phase5.md  migration_lua_env.md  model_analysis_AlphaZero.md  model_analysis_DQN.md  model_analysis_GumbelMuZero.md  model_analysis_PPO.md  model_analysis_SUMMARY.md  model_viewer_step_modes_proposal_2026-03-16.md  movement_runtime_audit_2026-03-17.md  multi-model-workflow.md  pc2-dqn-actors-setup-guide.md  pc2-phoenix-actors-setup-guide.md  pc2-remote-az-is-setup-guide.md  pc2-remote-gaz-is-setup-guide.md  pc2-remote-is-setup-guide.md  pc2-remote-smz-is-setup-guide.md  plan_variant_c_reachable_movement.md  qt_fire_dice_bug_diagnosis_2026-03-11.md  remote-inference-server-az.md  remote-inference-server-gaz.md  remote-inference-server-gmz.md  remote-inference-server-smz.md  rewards.md  selfplay_forensic_2026-03-18.md  selfplay_recovery_plan_2026-03-18.md  state_v2.md  viewer_baseline_metrics.md  (+4 more)
godot/: Main.tscn  README.md  project.godot
godot_viewer/: README.md  project.godot
gui/: Application.cpp  CMakeLists.txt  LastRoster.cpp  README.md  RosterModel.cpp  data.json  gettingStarted.txt  play.cpp  popup.cpp  response.txt  state.json  units.cpp  units.txt  warn.cpp
gui/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  units.txt
gui/include/: Application.h  RosterModel.h  play.h  popup.h  units.h
gui_imgui/: CMakeLists.txt  README.md  app_state.cpp  app_state.h  main.cpp  play_state.cpp  play_state.h  train_state.cpp  train_state.h  ui_panels.cpp  ui_panels.h
gui_qt/: 40k.bat  CMakeLists.txt  README.md  icon_sizes.json  main.py  runtime_settings.json
gui_qt/qml/: Main.qml
gui_qt/resources/: dark.qss
gui_qt/src/: MainWindow.cpp  MainWindow.h
gui_qt/src/dialogs/: ArmyViewerDialog.cpp  ArmyViewerDialog.h
gui_qt/src/tabs/: EvalTab.cpp  EvalTab.h  MetricsTab.cpp  MetricsTab.h  PlayTab.cpp  PlayTab.h  SettingsTab.cpp  SettingsTab.h  TrainTab.cpp  TrainTab.h
gui_qt/src/util/: ProcessRunner.cpp  ProcessRunner.h  RosterStore.cpp  RosterStore.h  SettingsStore.cpp  SettingsStore.h  Types.h
installation/: install  install.c
installer/: 40kAI.iss  40kAI_gui.spec  README.md  install_deps.bat
lua_host/: host.lua
metrics/: actor_det_eval_2446753.jsonl  actor_det_eval_3253537.jsonl  actor_det_eval_4127444.jsonl  actor_det_eval_6966353.jsonl  actor_det_eval_latest.json  alphazero_stats_20260222-154419.csv  episodes_2446753.jsonl  episodes_3253537.jsonl  episodes_4127444.jsonl  episodes_6966353.jsonl  episodes_latest.jsonl  heur_metrics_1902946.json  heur_metrics_5567502.json  heur_metrics_latest.json  io_profile.json  stats_10207.csv  stats_106604.csv  stats_1093550.csv  stats_1142103.csv  stats_1165013.csv  stats_118534.csv  stats_1216463.csv  stats_122849.csv  stats_1241095.csv  stats_1457301.csv  stats_1535738.csv  stats_1587264.csv  stats_1601721.csv  stats_1696676.csv  stats_1877334.csv  stats_1902946.csv  stats_2036015.csv  stats_2172372.csv  stats_219761.csv  stats_223784.csv  stats_2322292.csv  stats_232977.csv  stats_2388846.csv  stats_2413411.csv  stats_2432151.csv  (+131 more)
mockups/: eval_mission_mockups.html  model_help_E_variants.html  model_help_family_sidebar.html  model_help_family_variants.html  model_help_variants.html  training_algo_help_D_variants.html  training_algo_help_mockups.html  warhammer_viewer_mockup.html
model/: DQN.py  agent_types.py  alphazero.py  memory.py  opponent_adapter.py  utils.py
plans/: 2026-06-18-stage8-4-windowed-mcts-rollout.md  2026-06-26-eval-battle-report.md  az-distributed-selfplay.md  az-tree-inference-server.md  gaz-distributed-selfplay.md  gaz-inference-server.md  honest-az-det-eval.md  honest-gmz-det-eval.md
python_env/: lua_env.py  smoke_test.py
runtime_data/: Application.cpp  CMakeLists.txt  README.md  RosterModel.cpp  data.json  play.cpp  state.json  style-dark.css  units.cpp  warn.cpp
scripts/: build_gui_exe.bat  build_installer.bat  debug_stratagems.py  detect_torch_variant.py  godot_play.py  godot_play.sh  play2d.sh  smoke_gmz_reaction_policy.py  tui.sh  viewer.bat  viewer.ps1  viewer.sh
tests/: conftest.py  test_agent_registry_contract.py  test_alphazero_pipeline.py  test_command_phase_reanimation_sync_regression.py  test_dead_units_visual_filter_regression.py  test_deployment_stage1_regression.py  test_enemy_heuristic_layers_contract.py  test_enemy_heuristic_matchup_contract.py  test_enemy_heuristic_target_selection_contract.py  test_eval_agent_vs_agent.py  test_eval_asymmetric_rosters.py  test_eval_honest_symmetry.py  test_eval_phase_obs_resolve.py  test_eval_side_aware_masks.py  test_eval_stratagem_metric.py  test_eval_swap_sides.py  test_fallback_logging_regression.py  test_gaz_remote_search_cfg_builder.py  test_gui_eval_summary_v2_contract.py  test_gui_metrics_state_fallback.py  test_gui_model_positions_regression.py  test_heuristic_metrics_gui_contract.py  test_io_p0_regression.py  test_io_p1_regression.py  test_io_p2_regression.py  test_ppo_buffer.py  (+31 more)
(+830 files in other folders)
